# ragnaroek-midgard-data

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  dg_quick.php
dists/OBS/: debian.README.Debian  debian.changelog  debian.control  debian.copyright  debian.midgard-data.config  debian.midgard-data.install  debian.midgard-data.postinst  debian.midgard-data.templates  debian.rules  midgard-cms.spec  midgard-data.dsc  midgard-data.spec  midgard.pp
dists/fedora/: midgard-cms.spec  midgard-data.spec
dists/fedora/selinux/targeted/: midgard.fc  midgard.te
man/: datagard.1
midgard/: midgard_language.sql
midgard/blobs/: README.txt
midgard/setup/php/: datagard.in  midgard_admin_sitewizard.php  midgard_admin_sitewizard_cli.php  midgard_admin_sitewizard_creator.php  midgard_admin_sitewizard_creator_host.php  midgard_admin_sitewizard_creator_sitegroup.php  midgard_admin_sitewizard_creator_structure.php  midgard_admin_sitewizard_exception.php  midgard_cron.php  midgard_datagard.php  midgard_quick_setup.php  midgard_setup_app.php  midgard_setup_config.php  midgard_setup_cron.php  midgard_setup_database.php  midgard_setup_database_interface.inc.php  midgard_setup_getargs.php  midgard_setup_globals.php.in  midgard_setup_log.php  midgard_setup_pear.php  midgard_setup_pear_packages  midgard_setup_pear_templates  midgard_setup_ui.php  midgard_setup_ui_cli.php  midgard_setup_ui_midcom.php  midgard_setup_vhost.php  midgard_setup_vhost_config.php  midgard_setup_wizard.php  structure_config.inc  structure_openpsa.inc
tools/: midgard_clean_old_objects.php  midgard_old_guids.txt
